force-app/main/default/objects/ASF_Communication_Log__c/ASF_Communication_Log__c.object-meta.xml
<CustomObject>
    <label>Communication Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Communication Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>