force-app/main/default/objects/ASF_Communication_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Logs</relationshipLabel>
    <relationshipName>Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>