force-app/main/default/objects/ASF_Communication_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Communication Logs</relationshipLabel>
    <relationshipName>Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>