force-app/main/default/objects/ASF_Communication_Log__c/fields/communication_channels__c.field-meta.xml
<CustomField>
    <fullName>communication_channels__c</fullName>
    <label>communication channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>