force-app/main/default/objects/ASF_Communication_Log__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <defaultValue>&quot;Customer&quot;</defaultValue>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>