force-app/main/default/objects/ASF_Communication_Log__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user that initiated the notification. This is created as a custom field instead of using the standard created by because these logs are created via platform event (asynchronously) and always holds the process automation user name. Its not a formula field as PE Logger is a text field and not a lookup</description>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>