force-app/main/default/objects/ASF_Communication_Log__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <description>Indicates the timestamp at which the notification was initiated. This is created as a custom field instead of using the standard created date because these logs are created via platform event (asynchronously) and doesn&apos;t provide the real timestamp of initiation. Its not a formula field as PE Logger is a text field and not a lookup</description>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>