force-app/main/default/objects/ASF_Communication_Log__c/fields/Email_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Delivery_Status__c</fullName>
    <label>Email Delivery Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>