force-app/main/default/objects/ASF_Communication_Log__c/fields/Email_Merge_Field10__c.field-meta.xml
<CustomField>
    <fullName>Email_Merge_Field10__c</fullName>
    <label>Email Merge Field10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>