force-app/main/default/objects/ASF_Communication_Log__c/fields/Email_Msg_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Msg_Body__c</fullName>
    <label>Email Msg Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>