force-app/main/default/objects/ASF_Communication_Log__c/fields/Email_template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_template_Name__c</fullName>
    <label>Email template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>