force-app/main/default/objects/ASF_Communication_Log__c/fields/Encrypted_URL__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_URL__c</fullName>
    <label>Encrypted URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>