force-app/main/default/objects/ASF_Communication_Log__c/fields/External_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Template_ID__c</fullName>
    <label>External Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>