force-app/main/default/objects/ASF_Communication_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Prospect Communication.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Logs</relationshipLabel>
    <relationshipName>Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>