force-app/main/default/objects/ASF_Communication_Log__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>AIF</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>