force-app/main/default/objects/ASF_Communication_Log__c/fields/PE_Logger_Id__c.field-meta.xml
<CustomField>
    <fullName>PE_Logger_Id__c</fullName>
    <label>PE Logger Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>