force-app/main/default/objects/ASF_Communication_Log__c/fields/Renewal_Request__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the renewal request for which this notification was sent out</description>
    <label>Renewal Request</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Communication Logs</relationshipLabel>
    <relationshipName>Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>