force-app/main/default/objects/ASF_Communication_Log__c/fields/Send_To_Specific_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Specific_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to send SMS to specific Mobile Number only from Case.</description>
    <label>Send To Specific Mobile</label>
    <type>Checkbox</type>
</CustomField>