force-app/main/default/objects/ASF_Communication_Log__c/fields/SMS_LT_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_LT_Name__c</fullName>
    <label>SMS LT Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>