force-app/main/default/objects/ASF_Communication_Log__c/fields/SMS_Merge_Field1__c.field-meta.xml
<CustomField>
    <fullName>SMS_Merge_Field1__c</fullName>
    <label>SMS Merge Field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>