force-app/main/default/objects/ASF_Communication_Log__c/fields/SMS_Msg_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Msg_Body__c</fullName>
    <label>SMS Msg Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>