force-app/main/default/objects/ASF_Communication_Log__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>User Friendly template name for end-user facing communication history</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>