force-app/main/default/objects/ASF_Communication_Log__c/fields/Tiny_URL__c.field-meta.xml
<CustomField>
    <fullName>Tiny_URL__c</fullName>
    <label>Tiny URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>