force-app/main/default/objects/ASF_Communication_Log__c/fields/Whatsapp_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Error_Message__c</fullName>
    <label>Whatsapp_Error_Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>