force-app/main/default/objects/ASF_Communication_Log__c/fields/WhatsApp_LT_Name__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_LT_Name__c</fullName>
    <label>WhatsApp LT Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>