force-app/main/default/objects/ASF_Communication_Log__c/fields/Whatsapp_Merge_Field1__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Merge_Field1__c</fullName>
    <label>Whatsapp Merge Field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>