force-app/main/default/objects/ASF_Communication_Log__c/fields/Whatsappp_Msg_Body__c.field-meta.xml
<CustomField>
    <fullName>Whatsappp_Msg_Body__c</fullName>
    <label>Whatsappp Msg Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>